[css-grid] Stretch should grow and shrink items to fit its grid area

After some discussions the CSS WG agreed that stretch should not only
grow items, but also stretch them to fit its grid area.
That way the "min-width|height: auto" is somehow ignored for grid items.
More info at: https://github.com/w3c/csswg-drafts/issues/283

The good part is that this allows us to remove some ugly code we've
in LayoutBox that was only used by Grid Layout.

The tests have been updated according to the new expected behavior.

For images, we'll be stretching on both axis right nos, so the aspect
ratio won't be preserved. The default behavior might change in those
cases, but that should be implemented in a different patch.

BUG=653433

Review-Url: https://codereview.chromium.org/2398043002
Cr-Commit-Position: refs/heads/master@{#423839}

Former-commit-id: da340247a837f07594b3fcfb59a4e4493dc0fd45